# snake

./: CMakeLists.txt  run.sh
include/: AnsiColor.h  Color.h  Flags.h  IDrawable.h  Matrix.h  Pixel.h  Point.h  Screen.h  Snake.h  SnakeFlags.h  Terminal.h  Walls.h  World.h
src/: AnsiColor.cpp  Color.cpp  Flags.cpp  Pixel.cpp  Point.cpp  Screen.cpp  Snake.cpp  SnakeFlags.cpp  Walls.cpp  World.cpp  main.cpp
